--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -2,6 +2,7 @@
   "name": "@fastcampus/themes",
   "version": "0.0.1",
   "type": "module",
+  "main": "dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -11,14 +12,14 @@
     "./themes.css": "./dist/themes.css"
   },
   "scripts": {
-    "build": "npm run clean && npm run build:js && npm run build:type && npm run build:css",
+    "build": "yarn clean && yarn build:js && yarn build:type && yarn build:css",
     "build:js": "node build.js",
     "build:type": "tsc --emitDeclarationOnly",
     "clean": "rm -rf dist",
     "build:css": "node ./scripts/build-css-module.js"
   },
   "devDependencies": {
-    "esbuild": "^0.16.17",
+    "@fastcampus/esbuild-config": "workspace:^",
     "typescript": "^5.2.2"
   }
 }
