--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -2,6 +2,8 @@
   "name": "@fastcampus/storybook",
   "packageManager": "yarn@4.6.0",
   "devDependencies": {
+    "@fastcampus/react-components-layout": "workspace:^",
+    "@fastcampus/themes": "workspace:^",
     "@storybook/addon-essentials": "7.6.20",
     "@storybook/addon-interactions": "7.6.20",
     "@storybook/addon-links": "7.6.20",
@@ -11,13 +13,14 @@
     "@storybook/react-vite": "7.6.20",
     "@storybook/test": "7.6.20",
     "prop-types": "15.8.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "storybook": "7.6.20",
+    "storybook-addon-root-attributes": "^2.1.3",
     "vite": "^6.0.7"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build": "storybook build"
   }
 }
