--- a/packages/react/components/layout/package.json
+++ b/packages/react/components/layout/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18",
     "@vanilla-extract/css": "^1.17.0",
     "@vanilla-extract/esbuild-plugin": "^2.3.13",
+    "@vanilla-extract/sprinkles": "^1.6.3",
     "react": "18",
     "react-dom": "18",
     "typescript": "^5.2.2"
@@ -31,5 +32,8 @@
   "peerDependencies": {
     "@fastcampus/themes": "workspace:^",
     "react": "*"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1"
   }
 }
