--- a/packages/react/components/button/package.json
+++ b/packages/react/components/button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fastcampus/react-components-layout",
+  "name": "@fastcampus/react-components-button",
   "version": "0.0.1",
   "type": "module",
   "exports": {
@@ -23,6 +23,7 @@
     "@types/react": "18",
     "@types/react-dom": "18",
     "@vanilla-extract/css": "^1.17.0",
+    "@vanilla-extract/dynamic": "^2.1.2",
     "@vanilla-extract/esbuild-plugin": "^2.3.13",
     "@vanilla-extract/recipes": "^0.5.5",
     "@vanilla-extract/sprinkles": "^1.6.3",
