--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "nx build",
     "graph": "nx run-many --target=build --graph",
     "dev:storybook": "nx storybook @fastcampus/storybook",
-    "dev:packages": "nx run-many --target=dev --projects='@fastcampus/react-components-*'"
+    "dev:packages": "nx run-many --target=dev --projects='@fastcampus/react-hooks-*,@fastcampus/react-components-*'"
   },
   "packageManager": "yarn@4.6.0",
   "devDependencies": {
