--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "@fastcampus/react-components-button": "workspace:^",
     "@fastcampus/react-components-layout": "workspace:^",
+    "@fastcampus/react-hooks-button": "workspace:^",
+    "@fastcampus/react-hooks-toggle": "workspace:^",
     "@fastcampus/themes": "workspace:^",
     "@storybook/addon-essentials": "7.6.20",
     "@storybook/addon-interactions": "7.6.20",
