--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -4,7 +4,9 @@
   "devDependencies": {
     "@fastcampus/react-components-accordion": "workspace:^",
     "@fastcampus/react-components-button": "workspace:^",
+    "@fastcampus/react-components-input": "workspace:^",
     "@fastcampus/react-components-layout": "workspace:^",
+    "@fastcampus/react-components-toast": "workspace:^",
     "@fastcampus/react-hooks-button": "workspace:^",
     "@fastcampus/react-hooks-toggle": "workspace:^",
     "@fastcampus/themes": "workspace:^",
