--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -10,6 +10,7 @@
     "@fastcampus/react-hooks-button": "workspace:^",
     "@fastcampus/react-hooks-toggle": "workspace:^",
     "@fastcampus/themes": "workspace:^",
+    "@storybook/addon-a11y": "7",
     "@storybook/addon-essentials": "7.6.20",
     "@storybook/addon-interactions": "7.6.20",
     "@storybook/addon-links": "7.6.20",
@@ -18,14 +19,25 @@
     "@storybook/react": "7.6.20",
     "@storybook/react-vite": "7.6.20",
     "@storybook/test": "7.6.20",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.0.2",
+    "happy-dom": "^16.7.1",
     "prop-types": "15.8.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "storybook": "7.6.20",
     "storybook-addon-root-attributes": "^2.1.3",
-    "vite": "^6.0.7"
+    "vite": "^6.0.7",
+    "vitest": "^3.0.2"
   },
   "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
     "storybook": "storybook dev -p 6006",
     "build": "storybook build"
   }
